fix collapse, fix scroll

--- a/public/stylesheets/css/chat.css
+++ b/public/stylesheets/css/chat.css
@@ -19,11 +19,16 @@ form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 
 #headBar {
   width: 100%;
   height: 4em;
+  flex-shrink: 0;
+  position: sticky;
   background-color: #000;
   border: solid black 1px;
   border-radius: 0;
   padding: 0;
-  margin: 0;
+  margin: 0
+}
+#headBar:hover{
+  cursor: pointer;
 }
 #contentWrapper {
   flex: 1;
